--- a/srv/passport/conf/app.yml
+++ b/srv/passport/conf/app.yml
@@ -22,3 +22,7 @@ stan:
   cluster_id: "test-cluster"
 mysql:
   data_source: "root:123456@tcp(192.168.56.189:3306)/dm_passport"
+redis:
+  addr: "192.168.56.189:6379"
+  password: "123456"
+  db: 0
