--- a/web/dd/conf/app.yml
+++ b/web/dd/conf/app.yml
@@ -4,7 +4,7 @@ micro:
   server_version: "1.0.0"
   register_ttl: 30
   register_interval: 15
-  registry: etcd
+  registry: etcd # 用于服务发现，向 etcd 注册本 service 的地址和名字
   registry_address:
     - "192.168.56.189:2379"
 logger:
